Fixing flashing screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #2E2E2E;
+}
+
 #container {
     background-color: #3498db;
     font-family: 'Open Sans', sans-serif;
